# List-Formatting

./: .gitignore  404.html  README.md  deploy-docs.cmd  deploy-docs.sh  fdasdf  index.html  mkdocs.yml  sample-template.json  samples.json  sitemap.xml
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: ---bug.md  ---sample-request.md  ---suggestion.md  --question.md  bug.md  config.yml
Project Management/: Severity.json
assets/: sample.json  sample.json.old
column-samples/: DonutChart  Eisenhower Matrix  README-template.md  readme.md
column-samples/Generic_File_Preview/: File_preview
column-samples/Hyperlink-long-addresses/: README.md
column-samples/approval-button-drafts/: README.md  approval-button-version-drafts.json
columnsamples/: index.html
contributing/: index.html
css/: extra.css
docs/: columnsamples.md  formsamples.md  index.md  viewsamples.md
form-samples/: README-template.md  README.md
formsamples/: index.html
gettingstarted/: index.html
highlight-selected-item-rows/: README.md  highlight-selected-item-rows.json
js/: clarity.js  extra.js
row-samples/: README-template.md  readme.md
samples/: README-template.md  readme.md
search/: search_index.json
tools/: index.html
tools/sharepoint-formatting-mcp/: .gitignore  README.md  pyproject.toml
tools/sharepoint-formatting-mcp/src/sharepoint_formatting_mcp/: __init__.py  __main__.py  indexer.py  server.py
view-samples/: Project Management  Project-Gantt-Chart  README-template.md  readme.md
viewsamples/: index.html
(+2011 files in other folders)
